resolved compiler warnings (e.g. some input files use or override a deprecated API.) and minor code optimization