@@ -1,9 +1,5 @@
 package com.baloise.testautomation.taf.base;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
-
 import java.text.DecimalFormatSymbols;
 
 import org.junit.Test;
@@ -13,6 +9,8 @@ import com.baloise.testautomation.taf.base.types.TafComboString;
 import com.baloise.testautomation.taf.base.types.TafDouble;
 import com.baloise.testautomation.taf.base.types.TafInteger;
 import com.baloise.testautomation.taf.base.types.TafString;
+
+import static org.junit.Assert.*;
 
 public class TestTafTypes {
 
@@ -26,15 +24,15 @@ public class TestTafTypes {
     assertTrue(cs.asTafDate().isNull());
     cs = TafComboString.normalString("{Skip}");
     assertTrue(cs.isSkip());
-    assertEquals(null, cs.asString());
+    assertNull(cs.asString());
   }
 
   @Test
   public void tafInteger() {
     TafInteger i = TafInteger.normalInteger(111);
-    assertEquals(new Integer(111), i.asTafInteger().asInteger());
+    assertEquals(Integer.valueOf(111), i.asTafInteger().asInteger());
     assertEquals("111", i.asTafString().asString());
-    assertEquals(new Double(111.0), i.asTafDouble().asDouble());
+    assertEquals(Double.valueOf(111.0), i.asTafDouble().asDouble());
     assertTrue(i.asTafDate().isNull());
     assertTrue(i.asTafBoolean().isNull());
     i = TafInteger.skipInteger();
@@ -43,22 +41,24 @@ public class TestTafTypes {
     assertTrue(i.asTafDouble().isSkip());
     assertTrue(i.asTafInteger().isSkip());
     i = new TafInteger("124");
-    assertEquals(i.asInteger(), new Integer(124));
+    assertEquals(Integer.valueOf(124), i.asInteger());
     i = new TafInteger("124" + DecimalFormatSymbols.getInstance().getDecimalSeparator() + "49");
-    assertEquals(new Integer(124), i.asInteger());
+    assertEquals(Integer.valueOf(124), i.asInteger());
     i = new TafInteger("124" + DecimalFormatSymbols.getInstance().getDecimalSeparator() +"51");
-    assertEquals(new Integer(125), i.asInteger());
+    assertEquals(Integer.valueOf(125), i.asInteger());
     try {
-      i = new TafInteger("abc");
+      new TafInteger("abc");
       fail();
     }
-    catch (Throwable e) {}
+    catch (Throwable e) {
+      // ignore exception
+    }
     i = TafInteger.normalInteger("{custom}{test}");
-    assertEquals(null, i.asInteger());
-    assertEquals(null, i.asLong());
+    assertNull(i.asInteger());
+    assertNull(i.asLong());
     assertEquals("{custom}{test}", i.asString());
-    assertEquals(true, i.isCustom());
-    assertEquals(true, i.asTafInteger().isCustom());
+    assertTrue(i.isCustom());
+    assertTrue(i.asTafInteger().isCustom());
     assertEquals("{custom}{test}", i.asTafString().asString());
   }
 
@@ -81,7 +81,7 @@ public class TestTafTypes {
     assertTrue(s.asTafInteger().isSkip());
     s = new TafString("{sKip}");
     assertTrue(s.isSkip());
-    assertEquals(null, s.asString());
+    assertNull(s.asString());
     s = TafString.normalString("{custom}{test}");
     assertEquals("{test}", s.getCustom());
     assertEquals("{custom}{test}", s.asString());
@@ -94,10 +94,10 @@ public class TestTafTypes {
   @Test
   public void tafDouble() {
     TafDouble d = TafDouble.normalDouble(2.2);
-    assertEquals(new Double(2.2), d.asDouble());
-    assertEquals(new Integer(2), d.asInteger());
+    assertEquals(Double.valueOf(2.2), d.asDouble());
+    assertEquals(Integer.valueOf(2), d.asInteger());
     d = TafDouble.normalDouble(2.6);
-    assertEquals(new Integer(2), d.asInteger());
+    assertEquals(Integer.valueOf(2), d.asInteger());
     d = TafDouble.normalDouble("{custom}{test}");
     assertEquals("{custom}{test}", d.asString());
     assertEquals("{test}", d.getCustom());
@@ -108,15 +108,15 @@ public class TestTafTypes {
   public void tafBoolean() {
     TafBoolean b = TafBoolean.normalBoolean("{true}");
     assertEquals(true, b.asBoolean());
-    assertEquals(true, b.asPrimitiveBoolean());
+    assertTrue(b.asPrimitiveBoolean());
     b = TafBoolean.normalBoolean("{false}");
     assertEquals(false, b.asBoolean());
-    assertEquals(false, b.asPrimitiveBoolean());
+    assertFalse(b.asPrimitiveBoolean());
     b = TafBoolean.normalBoolean("{null}");
-    assertEquals(null, b.asBoolean());
+    assertNull(b.asBoolean());
     b = TafBoolean.normalBoolean("{custom}{test}");
-    assertEquals(true, b.isCustom());
-    assertEquals(null, b.asBoolean());
+    assertTrue(b.isCustom());
+    assertNull(b.asBoolean());
     assertEquals("{custom}{test}", b.asString());
     assertEquals("{test}", b.getCustom());
     assertEquals("{test}", b.asTafString().getCustom());
